--- a/index.html
+++ b/index.html
@@ -14,26 +14,128 @@
     body{margin:0;font-family:"Cairo","Segoe UI",system-ui,Arial,sans-serif;background:var(--bg);color:var(--text);}
     a{color:inherit;text-decoration:none}
     .container{max-width:1200px;margin:0 auto;padding:16px}
+    @media(max-width:500px){.container{padding:12px}}
 
-    /* Header */
-    header{position:sticky;top:0;background:rgba(248,249,250,.8);backdrop-filter:blur(6px);border-bottom:1px solid #dee2e6;z-index:40}
-    .nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
-    .brand{display:flex;align-items:center;gap:10px}
-    .logo{width:36px;height:36px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#06b6d4)}
-    .title{font-weight:800}
-    .tabs{display:flex;flex-wrap:wrap;gap:8px}
-    .tab{padding:8px 12px;border:1px solid #dee2e6;background:var(--card);border-radius:12px;cursor:pointer}
-    .tab.active{border-color:var(--accent);box-shadow:0 0 0 2px rgba(59,130,246,.25) inset}
+    header {
+  background-color: #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* ظل أعمق */
+  padding: 1rem 2rem;
+  margin: 20px auto; /* يبعد الهيدر عن حواف الصفحة */
+  width: 95%;
+  max-width: 1200px;
+  border-radius: 10px; /* حواف دائرية */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  direction: rtl; /* تُغيّرها للعربي إذا أردت */
+  z-index: 10;
+position: relative; /* لو عايز تضمن أن الهيدر فوق المحتوى */
+  /* لو عايز تأثير زجاجي */
+background: rgba(255, 255, 255, 0.9); /* لو الخلفية شفافة */
+  
+}
+
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #964B00;
+    }
+    
+    nav {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+    }
+    .menu-toggle {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #333; /* مهم عشان تظهر الأيقونة بلون واضح */
+}
+
+.side-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 70%;
+  max-width: 300px;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.9); /* لو الخلفية شفافة */
+  backdrop-filter: blur(12px); /* لو عايز تأثير زجاجي */
+  -webkit-backdrop-filter: blur(12px);
+  box-shadow: -2px 0 10px rgba(0,0,0,0.2);
+  padding: 2rem 1rem;
+  z-index: 999;
+  flex-direction: column;
+  gap: 1rem;
+  transition: transform 0.3s ease;
+}
+
+.side-menu nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.side-menu a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+
+.side-menu .close-btn {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  align-self: flex-end;
+  cursor: pointer;
+  margin-bottom: 1rem;
+  color: #333;          /* لون واضح */
+  position: relative;
+  z-index: 1100;
+}
+
+.side-menu.open {
+  display: flex;
+}
+
+@media (max-width: 600px) {
+  header > nav {
+    display: none; /* إخفاء القائمة الأصلية فقط على الشاشات الصغيرة */
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+
+
+  nav:not(.side-menu nav) {
+    display: none; /* إخفاء القائمة العادية على الموبايل */
+  }
+}
 
     /* Layout */
     .grid{display:grid;gap:16px}
     .grid-2{grid-template-columns:1.2fr .8fr}
-    @media(max-width:900px){.grid-2{grid-template-columns:1fr}}
+    @media(max-width:600px){.grid-2{grid-template-columns:1fr}}
+    @media(max-width:500px){.grid{gap:8px}}
 
     /* Cards */
     .card{background:var(--card);border:1px solid #dee2e6;border-radius:16px;padding:16px}
     .card h3{margin:0 0 8px 0}
     .muted{color:var(--sub);font-size:.9rem}
+    @media(max-width:500px){.card{padding:12px;border-radius:12px}}
 
     /* Forms */
     .row{display:grid;grid-template-columns:repeat(12,1fr);gap:10px}
@@ -43,8 +145,9 @@
     .col-3{grid-column:span 3}
     @media(max-width:700px){.col-6,.col-4,.col-3{grid-column:span 12}}
     label{display:block;margin:6px 0 4px;color:#495057}
-    input,select,textarea{width:100%;padding:10px;background:#ffffff;border:1px solid #dee2e6;border-radius:12px;color:#212529}
+    input,select,textarea{width:100%;padding:10px;background:#ffffff;border:1px solid #dee2e6;border-radius:12px;color:#212529;min-height:40px}
     textarea{min-height:70px}
+    @media(max-width:500px){input,select,textarea{padding:8px;border-radius:8px;min-height:36px}label{margin:4px 0 2px}}
 
     /* Buttons */
     .actions{display:flex;flex-wrap:wrap;gap:10px;margin-top:12px}
@@ -53,12 +156,14 @@
     .btn.success{background:var(--accent-2);border-color:var(--accent-2)}
     .btn.danger{background:var(--danger);border-color:var(--danger)}
     .btn.ghost{background:transparent;border-color:#dee2e6}
+    @media(max-width:500px){.btn{padding:8px 12px}}
 
     /* Tables */
-    table{width:100%;border-collapse:collapse;border-radius:12px;overflow:hidden}
-    th,td{padding:10px;border-bottom:1px solid #dee2e6;text-align:right}
+    table{width:100%;border-collapse:collapse;border-radius:12px;overflow:auto}
+    th,td{padding:10px;border-bottom:1px solid #dee2e6;text-align:right;white-space:nowrap}
     th{background:#f8f9fa;color:#6c757d}
     tr:hover td{background:#e9ecef}
+    @media(max-width:700px){table{overflow-x:auto;display:block} th,td{min-width:80px; white-space: nowrap;}}
 
     .pill{display:inline-block;padding:4px 8px;border-radius:999px;border:1px solid #dee2e6;font-size:.8rem;color:#6c757d}
     .flex{display:flex;gap:12px;align-items:center}
@@ -67,7 +172,9 @@
     /* Invoice Modal */
     .modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;padding:16px;z-index:100}
     .modal.open{display:flex}
+    @media(max-width:500px){.modal{padding:8px}}
     .paper{background:#fff;color:#111;border-radius:12px;width:min(900px,100%);padding:20px}
+    @media(max-width:500px){.paper{padding:16px}}
     .paper h2{margin:0}
     .paper .row div{color:#111}
     .invoice-head{display:flex;justify-content:space-between;align-items:center;border-bottom:2px solid #e5e7eb;padding-bottom:10px;margin-bottom:10px}
@@ -82,26 +189,37 @@
 
     /* Landing tags */
     .tags{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0}
+
+    
   </style>
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="brand">
-        <div class="logo"></div>
-        <div>
-          <div class="title">شركة ايماكسا للتوريدات العامة</div>
-          <div class="muted" style="font-size:.9rem">نظام إداري (نسخة واجهة فقط – بيانات محلية)</div>
-        </div>
-      </div>
-      <nav class="tabs no-print">
+  
+    <header>
+    <div class="logo">شركة ايماكسا للتوريدات العامة</div>
+    <button class="menu-toggle" onclick="openMenu()">☰</button>
+
+    <!-- القائمة الأفقية (للكمبيوتر) -->
+    <nav class="tabs no-print">
         <a class="tab active" data-tab="landing">الواجهة العامة</a>
         <a class="tab" data-tab="items">الأقسام والأصناف</a>
         <a class="tab" data-tab="clients">العملاء</a>
         <a class="tab" data-tab="companies">الشركات/الموردون</a>
-        <a class="tab" data-tab="po">أمر شراء</a>
+        <a class="tab" data-tab="po">أمر توريد</a>
         <a class="tab" data-tab="settings">إعدادات المؤسسة</a>
       </nav>
+
+    <!-- القائمة الجانبية (للموبايل) -->
+    <div id="sideMenu" class="side-menu">
+      <button class="close-btn" onclick="closeMenu()">✖</button>
+      <nav>
+      <a class="tab" data-tab="landing">الواجهة العامة</a>
+      <a class="tab" data-tab="items">الأقسام والأصناف</a>
+      <a class="tab" data-tab="clients">العملاء</a>
+      <a class="tab" data-tab="companies">الشركات/الموردون</a>
+      <a class="tab" data-tab="po">أمر توريد</a>
+      <a class="tab" data-tab="settings">إعدادات المؤسسة</a>
+    </nav>
     </div>
   </header>
 
@@ -407,8 +525,19 @@
         if(id==='po'){fillPOSelectors();renderOrders();}
         if(id==='landing'){fillLandingSections();}
         if(id==='settings'){loadSettingsForm();}
-      });
+        closeMenu();
+      }); 
     });
+
+    // ===== Hamburger Menu =====
+   function openMenu() {
+  document.getElementById("sideMenu").classList.add("open");
+}
+
+function closeMenu() {
+  document.getElementById("sideMenu").classList.remove("open");
+}
+
 
     // ===== Sections & Items =====
     function renderSections(){
