--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ th{background:#f3f4f6;}
 
     <!-- LANDING -->
     <section class="card" id="tab-landing">
-      <h3>بحث الأصناف (Landing)</h3>
+      <h3>بحث الأصناف </h3>
       <div class="row">
         <div class="col-4">
           <label>القسم</label>
@@ -843,3 +843,4 @@ function closeMenu() {
   </script>
 </body>
 </html>
+
