--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>شركة ايماكسا للتوريدات العامة– لوحة إدارة ومخزن + Landing</title>
+  <title>شركة ايماكسا للتوريدات العامة– لوحة إدارة ومخزن </title>
   <!-- QRCode lib -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
@@ -385,7 +385,7 @@ th{background:#f3f4f6;}
     <!-- COMPANIES -->
     <section class="grid grid-2" id="tab-companies" style="display:none">
       <div class="card">
-        <h3>إضافة شركة/مورد</h3>
+        <h3>إضافة شركة</h3>
         <div class="row">
           <div class="col-6"><label>اسم الشركة</label><input id="coName"></div>
           <div class="col-6"><label>المدينة</label><input id="coCity"></div>
@@ -395,7 +395,7 @@ th{background:#f3f4f6;}
         </div>
       </div>
       <div class="card">
-        <h3>الشركات/الموردون</h3>
+        <h3>الشركات</h3>
         <div class="row">
           <div class="col-8"><input id="coSearch" placeholder="بحث بالاسم/المدينة"></div>
         </div>
@@ -408,7 +408,7 @@ th{background:#f3f4f6;}
     <!-- PURCHASE ORDER -->
     <section class="grid grid-2" id="tab-po" style="display:none">
       <div class="card">
-        <h3>إنشاء أمر شراء</h3>
+        <h3>إنشاء أمر توريد</h3>
         <div class="row">
           <div class="col-6"><label>العميل</label><select id="poClient"></select></div>
           <div class="col-6"><label>تاريخ</label><input type="date" id="poDate"></div>
@@ -843,4 +843,5 @@ function closeMenu() {
   </script>
 </body>
 </html>
+
 
